# Customer_Support_LLMOps

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app2.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yaml  data-ingestion.yaml
data/: codnetwork_faq.csv  codnetwork_faq.xlsx
infra/: watcher.py
notebook/: csv-pinecone.ipynb  experiments.ipynb  trials.ipynb
src/: helper.py  helper2.py  store_index.py  store_index2.py
src/prompt_library/: prompt.py
static/: script.js
templates/: index.html
