[project]
name = "customer-support-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.9",
    "pandas>=2.3.1",
    "pipreqs>=0.5.0",
    "python-dotenv==1.1.0",
    "watchdog>=6.0.0",
]
